--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,24 @@
+/Binaries/
+/DerivedDataCache/
+/Intermediate/
+/Saved/
+/Build/
+ 
+# Visual Studio solutions
+/*.sln
+/*.sdf
+/*.opensdf
+/*.suo
+
+# Linux Project files
+/*.pro
+/*.kdev4
+/CMakeLists.txt
+/Makefile
+ 
+# Xcode Project files
+/*.xcodeproj
+
 # Windows image file caches
 Thumbs.db
 ehthumbs.db
